# SROS

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  changes.diff  linker_script.ld  read_uart.py  todo.org
platform/: stm32f103.cmake  stm32f407.cmake
src/: LSM9DS1.h  globals.c  globals.cpp  globals.h  hw_init.cpp  hw_init.h  i2c.cpp  i2c.h  main.c  main.cpp  mem.cpp  mem.h  scheduler.cpp  scheduler.h  startup.c  syscall.c  thread.cpp  thread.h  usart.cpp  user_threads.h
src/attitude/: complementary_filter.cpp  complementary_filter.h  ekf.c  ekf.cpp  ekf.h
src/communication/: LSM9DS1.cpp  LSM9DS1.h  SPI.h  i2c.h  usart.h
src/ekf/: ekf.cpp  ekf.h
src/hal/: hw_specific.h
src/hal/stm32f103/: hw_init.cpp  hw_specific.c  hw_specific.cpp  hw_thread.cpp  i2c.c  linker_script.ld  startup.c  syscall.c  syscall.h  usart.c  usart.cpp
src/hal/stm32f407/: SPI.c  SPI.cpp  hw_init.cpp  hw_specific.c  hw_specific.cpp  hw_thread.c  hw_thread.cpp  i2c.cpp  linker_script.ld  startup.c  sycall.c  usart.c  usart.cpp
src/krnl/: mem.c  mem.cpp  mem.h  scheduler.c  scheduler.cpp  scheduler.h  thread.c  thread.cpp  thread.h
src/math/: matrix.c  matrix.cpp  matrix.h  quaternion.c  quaternion.cpp  quaternion.h  vector.c  vector.cpp  vector.h
src/sensors/: LSM9DS1.c  LSM9DS1.h
src/utils/: queue.h
